[tool.poetry]
name = "fithub"
version = "4.0.0"
description = ""
authors = ["Antonio Gamiz <antoniogamiz10@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
fire = "^0.3.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poe.tasks]
test = "echo 'hi'"